--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "zf-commons/zfc-user",
-    "description": "A generic user registration and authentication module for ZF2. Supports Zend\\Db and Doctrine2.",
+    "description": "A generic user registration and authentication module for ZF2. Supports Laminas\\Db and Doctrine2.",
     "type": "library",
     "license": "BSD-3-Clause",
     "keywords": [
@@ -26,33 +26,33 @@
     },
     "require": {
         "php": "^5.5|^7.0",
-        "zendframework/zend-authentication": "^2.5",
-        "zendframework/zend-crypt": "^3.0",
-        "zendframework/zend-form": "^2.9",
-        "zendframework/zend-inputfilter": "^2.7",
-        "zendframework/zend-loader": "^2.5",
-        "zendframework/zend-modulemanager": "^2.7",
-        "zendframework/zend-mvc": "^3.0",
-        "zendframework/zend-servicemanager": "^3.0",
-        "zendframework/zend-stdlib": "^3.0",
-        "zendframework/zend-validator": "^2.8",
-        "zendframework/zend-db": "^2.8",
-        "zendframework/zend-view": "^2.8",
-        "zendframework/zend-session" : "^2.7",
-        "zendframework/zend-http" : "^2.5",
-        "zendframework/zend-mvc-plugin-flashmessenger": "^1.0",
-        "zendframework/zend-i18n": "^2.7",
-        "zendframework/zend-mvc-plugin-prg": "^1.0",
-        "zendframework/zend-hydrator": "^2.0"
+        "laminas/laminas-authentication": "^2.7",
+        "laminas/laminas-crypt": "^3.3",
+        "laminas/laminas-form": "^2.14",
+        "laminas/laminas-inputfilter": "^2.10",
+        "laminas/laminas-loader": "^2.6",
+        "laminas/laminas-modulemanager": "^2.8",
+        "laminas/laminas-mvc": "^3.1",
+        "laminas/laminas-servicemanager": "^3.4",
+        "laminas/laminas-stdlib": "^3.2",
+        "laminas/laminas-validator": "^2.13",
+        "laminas/laminas-db": "^2.11",
+        "laminas/laminas-view": "^2.11",
+        "laminas/laminas-session": "^2.9",
+        "laminas/laminas-http": "^2.11",
+        "laminas/laminas-mvc-plugin-flashmessenger": "^1.2",
+        "laminas/laminas-i18n": "^2.10",
+        "laminas/laminas-mvc-plugin-prg": "^1.2",
+        "laminas/laminas-hydrator": "^3.0"
     },
-    "require-dev" : {
-        "phpunit/phpunit" : ">=3.7,<4",
-        "phpmd/phpmd" : "1.4.*",
-        "squizlabs/php_codesniffer" : "1.4.*",
-        "zendframework/zend-captcha" : "^2.6"
+    "require-dev": {
+        "phpunit/phpunit": ">=3.7,<4",
+        "phpmd/phpmd": "1.4.*",
+        "squizlabs/php_codesniffer": "1.4.*",
+        "laminas/laminas-captcha": "^2.6"
     },
     "suggest": {
-        "zendframework/zend-captcha" : "Zend\\Captcha if you want to use the captcha component"
+        "laminas/laminas-captcha": "Laminas\\Captcha if you want to use the captcha component"
     },
     "autoload": {
         "psr-0": {
